forcibly turn off endorsed standards override mechanism for external build process to get predictable results